--- a/cocos/scripting/lua-bindings/CMakeLists.txt
+++ b/cocos/scripting/lua-bindings/CMakeLists.txt
@@ -33,6 +33,8 @@ set(lua_bindings_manual_headers
     manual/cocostudio/CustomGUIReader.h
     manual/ui/lua_cocos2dx_ui_manual.hpp
     manual/controller/lua_cocos2dx_controller_manual.hpp
+    manual/extra/lua_extra_manual.h
+    manual/extra/lua_crypto_manual.h
     )
 
 set(lua_bindings_manual_files
@@ -70,6 +72,8 @@ set(lua_bindings_manual_files
     manual/physics3d/lua_cocos2dx_physics3d_manual.cpp
     manual/navmesh/lua_cocos2dx_navmesh_conversions.cpp
     manual/navmesh/lua_cocos2dx_navmesh_manual.cpp
+    manual/extra/lua_extra_manual.cpp
+    manual/extra/lua_crypto_manual.cpp
     )
 
 set(lua_bindings_auto_headers
