--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -58,11 +58,6 @@ if(BUILD_EXT_JPEG)
     add_subdirectory(jpeg)
     target_link_libraries(external ext_jpeg)
 endif(BUILD_EXT_JPEG)
-if(BUILD_EXT_OPENSSL)
-    add_subdirectory(openssl)
-    target_link_libraries(external ext_ssl)
-    target_link_libraries(external ext_crypto)
-endif(BUILD_EXT_OPENSSL)
 if(BUILD_EXT_UV)
     add_subdirectory(uv)
     target_link_libraries(external ext_uv)
@@ -103,12 +98,21 @@ if(BUILD_EXT_POLY2TRI)
     add_subdirectory(poly2tri)
     target_link_libraries(external ext_poly2tri)
 endif(BUILD_EXT_POLY2TRI)
-
 if(BUILD_EXT_MD5)
     add_subdirectory(md5)
     target_link_libraries(external ext_md5)
 endif(BUILD_EXT_MD5)
-
+if(BUILD_EXT_CURL)
+    add_subdirectory(curl)
+    target_link_libraries(external ext_curl)
+endif(BUILD_EXT_CURL)
+if(BUILD_EXT_OPENSSL)
+    add_subdirectory(openssl)
+    target_link_libraries(external ext_ssl)
+    target_link_libraries(external ext_crypto)
+endif(BUILD_EXT_OPENSSL)
+add_subdirectory(png)
+target_link_libraries(external ext_png)
 
 # use lua/js specific libs by property to prevent conflict
 if(BUILD_LUA_LIBS)
@@ -128,17 +132,6 @@ if(BUILD_LUA_LIBS)
         CC_LUA_DEPEND ext_luajit ext_tolua ext_cjson ext_lfs ext_lpack ext_lpeg ext_lsproto ext_lsqlite3 ext_luasocket ext_lunqlite ext_lzlib ext_protobuf
     )
 endif()
-
-if(NOT LINUX)
-    if(BUILD_EXT_CURL)
-        add_subdirectory(curl)
-        target_link_libraries(external ext_curl)
-    endif(BUILD_EXT_CURL)
-    add_subdirectory(png)
-    target_link_libraries(external 
-        ext_png
-    )
-endif(NOT LINUX)
 
 if(ANDROID)
     add_subdirectory(android-specific/cpufeatures)
