--- a/cocos/platform/android/libcocos2dx/build.gradle
+++ b/cocos/platform/android/libcocos2dx/build.gradle
@@ -26,4 +26,5 @@ android {
 
 dependencies {
     implementation fileTree(dir: '../java/libs', include: ['*.jar'])
+    implementation 'com.android.support:support-v4:26.1.0'
 }
