--- a/cocos/platform/CMakeLists.txt
+++ b/cocos/platform/CMakeLists.txt
@@ -93,6 +93,7 @@ elseif(APPLE)
             platform/ios/CCPlatformDefine-ios.h
             platform/ios/CCStdC-ios.h
             platform/ios/CCInputView-ios.h
+            platform/ios/openudid/OpenUDIDIOS.h
             )
         set(COCOS_PLATFORM_SPECIFIC_SRC
             ${COCOS_PLATFORM_SPECIFIC_SRC}
@@ -104,6 +105,7 @@ elseif(APPLE)
             platform/ios/CCGLViewImpl-ios.mm
             platform/ios/CCImage-ios.mm
             platform/ios/CCInputView-ios.mm
+            platform/ios/openudid/OpenUDIDIOS.m
             )
     endif()
 
