--- a/external/zlib/CMakeLists.txt
+++ b/external/zlib/CMakeLists.txt
@@ -17,14 +17,14 @@ set_target_properties(${target_name} PROPERTIES
   INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}/include"
 )
 
-if(MACOSX OR ANDROID)
-  set_target_properties(${target_name} PROPERTIES
-    IMPORTED_LOCATION "${platform_spec_path}/libz.a"
-  )
-elseif(WINDOWS)
+if(WINDOWS)
   set_target_properties(${target_name} PROPERTIES
     IMPORTED_LOCATION "${platform_spec_path}/zlib1.dll"
     IMPORTED_IMPLIB "${platform_spec_path}/zdll.lib"
+  )
+else()
+  set_target_properties(${target_name} PROPERTIES
+    IMPORTED_LOCATION "${platform_spec_path}/libz.a"
   )
 endif()
 
