添加  lua-protobuf （https://github.com/starwing/lua-protobuf）

--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -123,8 +123,9 @@ if(BUILD_LUA_LIBS)
     add_subdirectory(lua/lunqlite)
     add_subdirectory(lua/lzlib)
     add_subdirectory(lua/protobuf)
+    add_subdirectory(lua/lua-protobuf)
     set_property(TARGET external APPEND PROPERTY 
-        CC_LUA_DEPEND ext_luajit ext_tolua ext_cjson ext_lfs ext_lpack ext_lpeg ext_lsproto ext_lsqlite3 ext_luasocket ext_lunqlite ext_lzlib ext_protobuf
+        CC_LUA_DEPEND ext_luajit ext_tolua ext_cjson ext_lfs ext_lpack ext_lpeg ext_lsproto ext_lsqlite3 ext_luasocket ext_lunqlite ext_lzlib ext_protobuf ext_lua-protobuf
     )
 endif()
 
