--- a/templates/frameworks/runtime-src/proj.android/build.gradle
+++ b/templates/frameworks/runtime-src/proj.android/build.gradle
@@ -3,7 +3,8 @@
 buildscript {
     repositories {
         google()
-        jcenter()
+        //jcenter()
+        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
     }
 
     dependencies {
@@ -17,7 +18,8 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        // jcenter()
+        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
     }
 }
 
