--- a/templates/frameworks/runtime-src/proj.android/app/AndroidManifest.xml
+++ b/templates/frameworks/runtime-src/proj.android/app/AndroidManifest.xml
@@ -7,7 +7,8 @@
     
     <application
         android:label="@string/app_name"
-        android:allowBackup="true"
+		android:allowBackup="true"
+		android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher">
         
         <!-- Tell Cocos2dxActivity the name of our .so -->
