mac: support m1 arm64, openssl update to 1.1.0l,  glfw update to 3.3.4

--- a/templates/CMakeLists.txt
+++ b/templates/CMakeLists.txt
@@ -134,6 +134,7 @@ if(APPLE)
     set_target_properties(${APP_NAME} PROPERTIES RESOURCE "${APP_UI_RES}")
 	set_xcode_property(${APP_NAME} INSTALL_PATH "\${LOCAL_APPS_DIR}") # fix archive no file
     if(MACOSX)
+		set(CMAKE_OSX_ARCHITECTURES "$(ARCHS_STANDARD)")
         set_target_properties(${APP_NAME} PROPERTIES
                               MACOSX_BUNDLE_INFO_PLIST "${RUNTIME_SRC_ROOT}/proj.ios_mac/mac/Info.plist"
                               )
