add PROP_NDK_VERSION and PROP_BUILD_TOOLS_VERSION, fixed the ndk value.

--- a/templates/frameworks/runtime-src/proj.android/app/build.gradle
+++ b/templates/frameworks/runtime-src/proj.android/app/build.gradle
@@ -67,6 +67,8 @@ android {
             renderscriptDebuggable true
         }
     }
+    buildToolsVersion PROP_BUILD_TOOLS_VERSION
+    ndkVersion PROP_NDK_VERSION
 }
 
 android.applicationVariants.all { variant ->
