--- a/templates/frameworks/runtime-src/proj.android/gradle.properties
+++ b/templates/frameworks/runtime-src/proj.android/gradle.properties
@@ -26,6 +26,11 @@ PROP_MIN_SDK_VERSION=16
 # Android SDK version that will be used as the latest version of android this application has been tested on
 PROP_TARGET_SDK_VERSION=28
 
+# buildToolsVersion
+PROP_BUILD_TOOLS_VERSION=30.0.3
+
+# ndkVersion
+PROP_NDK_VERSION=20.1.5948944
 
 # List of CPU Archtexture to build that application with
 # Available architextures (armeabi-v7a | arm64-v8a | x86)
