去非必要lua库

--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -99,18 +99,10 @@ if(BUILD_LUA_LIBS)
     add_subdirectory(lua/luajit)
     add_subdirectory(lua/tolua)
     add_subdirectory(lua/cjson)
-    add_subdirectory(lua/lfs)
-    add_subdirectory(lua/lpack)
-    add_subdirectory(lua/lpeg)
-    add_subdirectory(lua/lsproto)
-    add_subdirectory(lua/lsqlite3)
-    add_subdirectory(lua/luasocket)
-    add_subdirectory(lua/lunqlite)
     add_subdirectory(lua/lzlib)
-    add_subdirectory(lua/protobuf)
     add_subdirectory(lua/lua-protobuf)
     set_property(TARGET external APPEND PROPERTY 
-        CC_LUA_DEPEND ext_luajit ext_tolua ext_cjson ext_lfs ext_lpack ext_lpeg ext_lsproto ext_lsqlite3 ext_luasocket ext_lunqlite ext_lzlib ext_protobuf ext_lua-protobuf
+        CC_LUA_DEPEND ext_luajit ext_tolua ext_cjson ext_lzlib ext_lua-protobuf
     )
 endif()
 
